Listview: fix for overlapping text and checkbox
[Issue] N/A
[Problem] Sample app ExercisePlanner: checkbox and text is overlap
[Solution] The issues is caused by too strong selectors in tau styles
which overrides app styles.
Change in TAU styles solves this issue.

--- a/src/css/profile/mobile/changeable/common/groupindex.less
+++ b/src/css/profile/mobile/changeable/common/groupindex.less
@@ -16,7 +16,7 @@
 		bottom: 7 * @unit_base;
 	}
 
-	+ .ui-li-static {
+	+ .ui-li-static:not(.li-has-checkbox) {
 		padding: 33 * @unit_base 17 * @unit_base 33 * @unit_base 32 * @unit_base;
 
 	}
